src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.metriq-navbar {
  font-family: 'Courier New', monospace;
}

.navbar-nav .metriq-navbar-text.nav-link {
    padding-top: 0.9rem;
}

.navbar-nav .metriq-navbar-text.nav-item {
  padding-top: 0.4rem;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

form > div.row {
  padding: 5px 0 5px 0;
}

form > .row > label {
  text-align: right;
}

.container a {
  color: #007bff;
}

.container a:hover {
  color: #0000EE;
  text-decoration: underline;
}

.hide {
  visibility: hidden;
}

.form-field-validator {
  display: inline;
  color: red;
  padding-left: 5px;
}

.break-all {
  word-wrap: break-word;
}

.submission {
  border: 1px solid black;
  margin: 6px;
  padding: 8px;
}

.submission-heading {
  padding: 0 8px 8px 8px
}

.submission-image {
  display: inline-block;
  vertical-align: -80px;
  width: 180px;
  height: auto;
  max-width: 180px;
  max-height: 180px;
  padding: 8px;
}

.submission-description {
  text-align: left;
  padding: 0 8px 8px 8px
}

.submission-button-block {
  display: inline-block;
  vertical-align: -100px;
}

.submission-edit-button-block {
  display: inline-block;
  vertical-align: -125px;
}

.submission-detail-container {
  text-align: left;
}

.submission-button {
  width: 80px;
  height: 38px;
  margin: 4px;
}

.task-method-item {
  display: inline-block;
  text-align: left;
}
.task-method-item-spacer {
  width: 20px;
}

.edit-button {
  width: 80px;
  height: 40px;
  margin: 4px;
  font-size: 0.5em;
  display: inline-block;
}

.edit-button-icon {
  color: black;
}

.index-table-link {
  color: #007bff;
}

.index-table-link:hover {
  color: #0000EE;
  text-decoration: underline;
}

.detail-table .rc-table-cell {
  border: 1px solid #282c34;
}

.max-width {
  max-width: 100%;
}

.container .submission a {
  color: #000000;
  text-decoration: none;
}

.password-visible-checkbox {
  display: inline-block;
}

.form-field-label {
  white-space: nowrap;
}

.metric-chart-label {
  text-align: right;
  font-weight: bold;
  padding-top: 8px;
}

/* D3.js: */

.grid line {
  stroke: lightgrey;
  stroke-opacity: 0.7;
  shape-rendering: crispEdges;
}

